--- a/templates/wrong_words.html
+++ b/templates/wrong_words.html
@@ -27,7 +27,7 @@
 
       <div class="buttons">
         <button id="reset-btn" class="reset-btn">リセット</button>
-        <a href="{{ url_for('index') }}" class="button back-btn">戻る</a>
+        <!-- <a href="{{ url_for('index') }}" class="button back-btn">戻る</a> -->
       </div>
     </div>
 
