--- a/templates/wrong_words.html
+++ b/templates/wrong_words.html
@@ -31,38 +31,14 @@
       </div>
     </div>
 
-    <script>
+    <!-- <script>
       document
         // document は「今表示されている Webページ」のこと。
         // .getElementById("reset-btn") は、ページの中から IDが”reset-btn”という要素（ボタン） を探します
         .getElementById("reset-btn")
         // これは「ボタンがクリックされたときに、次の関数（function）を実行してください」という意味です
         .addEventListener("click", function () {
-          // fetch() は「サーバと通信する関数」です。
-          // この例では、サーバに「/reset_wrong_words という場所へアクセスしてね」と言っています。
-          // 「ページを移動する」のではなく、裏でこっそり通信しています（これを「非同期通信」と言います）。
-          // 「POST」は「データを送るとき」に使う方法
-          // サーバに「このリクエストのデータは JSON 形式だよ」と伝えるための設定です。
-	        // この場合、実際にはデータ本体を送っていないのであまり意味はないですが、書いておくと安心な基本セットです。
-          fetch("/reset_wrong_words", {
-            method: "POST",
-            headers: {
-              "Content-Type": "application/json",
-            },
-          })
-            // response（サーバの返事）を .json() で JSON 形式に変換します。
-            // 例えば、サーバから { "status": "success" } のような返事が返ってきます。
-            .then((response) => response.json())
-
-            // JSON に変換したデータを、data という名前で受け取る
-            // window.location.href は「今表示しているページのURL」を指します。
-	          // それに / を代入すると、トップページに移動
-            .then((data) => {
-              if (data.status === "success") {
-                window.location.href = "/";
-              }
-            });
-        });
-    </script>
+    </script> -->
+    <script src="{{ url_for('static', filename='script_combined.js') }}"></script>
   </body>
 </html>
