script_combined has been renamed to script

--- a/templates/index.html
+++ b/templates/index.html
@@ -64,7 +64,7 @@
       </div>
     </div>
 
-    <script src="{{ url_for('static', filename='script_combined.js') }}"></script>
+    <script src="{{ url_for('static', filename='script.js') }}"></script>
     <!-- jsファイルで定義した関数を用いている -->
   </body>
 </html>
