--- a/templates/wrong_words.html
+++ b/templates/wrong_words.html
@@ -27,18 +27,10 @@
 
       <div class="buttons">
         <button id="reset-btn" class="reset-btn">リセット</button>
-        <!-- <a href="{{ url_for('index') }}" class="button back-btn">戻る</a> -->
+        <a href="/generate_sentence" class="button">例文生成</a> 
       </div>
     </div>
 
-    <!-- <script>
-      document
-        // document は「今表示されている Webページ」のこと。
-        // .getElementById("reset-btn") は、ページの中から IDが”reset-btn”という要素（ボタン） を探します
-        .getElementById("reset-btn")
-        // これは「ボタンがクリックされたときに、次の関数（function）を実行してください」という意味です
-        .addEventListener("click", function () {
-    </script> -->
     <script src="{{ url_for('static', filename='script_combined.js') }}"></script>
   </body>
 </html>
