--- a/templates/API.html
+++ b/templates/API.html
@@ -61,7 +61,7 @@
     </div>
 
     <div class="section">
-      <span class="label">例文：</span>
+      <span class="label">テスト例文：</span>
       <div class="sentence-box">{{ sentence }}</div>
     </div>
   </div>
