とりあえず動く

--- a/templates/start.html
+++ b/templates/start.html
@@ -12,11 +12,11 @@
         <h1 class="start-title">英単語テストアプリ</h1>
         
         <p>ボタンを押してテストを始めましょう！</p>
-        <a href="/test" id="start-btn"><button class="play-sound00 start-button">テストスタート</button></a>
+        <a href="/login" id="start-btn"><button class="play-sound00 start-button">テストスタート</button></a>
 
         <audio id="trans-sound" src="{{ url_for('static', filename='sounds/page_trans.mp3') }}"></audio>
         
-        <script src="{{ url_for('static', filename='script_combined.js') }}"></script>
+        <script src="{{ url_for('static', filename='script.js') }}"></script>
 
   
     </body>
