ページ構成の改修

--- a/templates/API.html
+++ b/templates/API.html
@@ -77,6 +77,10 @@
       <span class="label">例文（日本語訳）：</span>
       <div class="sentence-box">{{ translation }}</div>
     </div>
+    <div>
+      <a class="play-sound00 button" href="/generate_sentence">保存(未実装)</a>
+      <a class="play-sound00 button" href="/start">トップへ</a>
+    </div>
   <!-- </div> -->
 </body>
 </html>
