--- a/static/style.css
+++ b/static/style.css
@@ -65,6 +65,7 @@ body {
 
 
 h1 {
+  margin-top: 80px;
   margin-bottom: 30px;
   color: var(--text_main);
   font-size: 70px;
@@ -270,6 +271,7 @@ background-color: #717175;
   top: 0;
   left: 0;
   width: 100%;
+  height: 60px;
   background-color: #222;
   padding: 10px 20px;
   z-index: 1000;
@@ -350,4 +352,8 @@ background-color: #717175;
   background-color: #f8d7da;
   color: #721c24;
   border: 1px solid #f5c6cb;
+}
+
+.container {
+  margin-top: 80px;   /* ナビバーの高さより少し余裕を持たせる */
 }
