--- a/templates/login.html
+++ b/templates/login.html
@@ -12,7 +12,7 @@
   <body>
     <div class="container">
       <header>
-        <h1>ログイン</h1>
+        <h1>英単語学習アプリ</h1>
       </header>
 
       {% with messages = get_flashed_messages() %}
@@ -38,7 +38,7 @@
       </form>
 
       <div class="auth-links">
-        <a href="/register">新規登録はこちら</a>
+        <a href="/register" class="button">新規登録</a>
       </div>
     </div>
   </body>
