--- a/templates/start.html
+++ b/templates/start.html
@@ -12,13 +12,18 @@
         <h1 class="start-title">英単語テストアプリ</h1>
         
         <p>ボタンを押してテストを始めましょう！</p>
-        <a href="/login" id="start-btn"><button class="play-sound00 start-button">テストスタート</button></a>
+        <a href="/word" id="start-btn"><button class="play-sound00 start-button">テストスタート</button></a>
+
+        <a href="/my_words" id="logout-btn"><button class="play-sound00 start-button">単語登録</button></a>
+
+        <a href="/start" id="logout-btn"><button class="play-sound00 start-button">生成した文章(未実装)</button></a>
+
+        <a href="/" id="logout-btn"><button class="play-sound00 start-button">ログアウト</button></a>
 
         <audio id="trans-sound" src="{{ url_for('static', filename='sounds/page_trans.mp3') }}"></audio>
         
         <script src="{{ url_for('static', filename='script.js') }}"></script>
 
-  
     </body>
 
 </html>
