遷移した時にリセット

--- a/templates/API.html
+++ b/templates/API.html
@@ -79,7 +79,8 @@
     </div>
     <div>
       <a class="play-sound00 button" href="/generate_sentence">保存(未実装)</a>
-      <a class="play-sound00 button" href="/start">トップへ</a>
+      <button id="reset-btn" class="play-sound00 reset-btn">トップへ</button>
+      <script src="{{ url_for('static', filename='script.js') }}"></script>
     </div>
   <!-- </div> -->
 </body>
