--- a/templates/index.html
+++ b/templates/index.html
@@ -12,7 +12,7 @@
   <body>
     <nav class="navbar">
       <div class="nav_container">
-        <a class="play-sound00 nav_button" href="{{url_for('start')}}">トップへ</a>
+        <a class="play-sound00 nav_button" id="reset-btn" href="{{url_for('start')}}">トップへ</a>
         <a class="play-sound00 nav_button" href="/my_words">単語リスト</a> |
         <a class="play-sound00 nav_button" href="/logout">ログアウト</a>
       </div>
