--- a/templates/my_words.html
+++ b/templates/my_words.html
@@ -12,7 +12,7 @@
   <body>
     <nav class="navbar">
       <div class="nav_container">
-        <a class="play-sound00 nav_button" href="{{url_for('start')}}">トップへ</a>
+        <button id="reset-btn" class="play-sound00 reset-btn">トップへ</button>
         <a class="play-sound00 nav_button" href="/logout">ログアウト</a>
       </div>
     </nav>
