--- a/templates/API.html
+++ b/templates/API.html
@@ -80,8 +80,8 @@
     <div>
       <a class="play-sound00 button" href="/generate_sentence">保存(未実装)</a>
       <button id="reset-btn" class="play-sound00 reset-btn">トップへ</button>
-      <script src="{{ url_for('static', filename='script.js') }}"></script>
     </div>
-  <!-- </div> -->
+  <audio id="trans-sound" src="{{ url_for('static', filename='sounds/page_trans.mp3') }}"></audio>
+  <script src="{{ url_for('static', filename='script.js') }}"></script>
 </body>
 </html>
