--- a/templates/login.html
+++ b/templates/login.html
@@ -33,13 +33,12 @@
           <label
             >パスワード: <input type="password" name="password" required
           /></label>
-          <button type="submit" class="button">ログイン</button>
+          <button type="submit" class="play-sound00 button">ログイン</button>
+          <a href="/register" class="play-sound00 button">新規登録</a>
         </div>
       </form>
-
-      <div class="auth-links">
-        <a href="/register" class="button">新規登録</a>
-      </div>
     </div>
+    <audio id="trans-sound" src="{{ url_for('static', filename='sounds/page_trans.mp3') }}"></audio>
+    <script src="{{ url_for('static', filename='script.js') }}"></script>
   </body>
 </html>
