--- a/templates/register.html
+++ b/templates/register.html
@@ -33,13 +33,12 @@
           <label
             >パスワード: <input type="password" name="password" required
           /></label>
-          <button type="submit" class="button">登録</button>
+          <button type="submit" class="play-sound00 button">登録</button>
+          <a href="/" class="play-sound00 button">ログインはこちら</a>
         </div>
       </form>
-
-      <div class="auth-links">
-        <a href="/login">ログインはこちら</a>
-      </div>
     </div>
+    <audio id="trans-sound" src="{{ url_for('static', filename='sounds/page_trans.mp3') }}"></audio>
+    <script src="{{ url_for('static', filename='script.js') }}"></script>
   </body>
 </html>
